[package]
name = "quicksweeper"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
bevy_dylib = [ "bevy/dynamic" ]

[dependencies]
bevy = { version = "0.9" }
bevy_asset_loader = { version = "0.14", features = ["stageless"] }
bevy_egui = "0.17"
iyes_loopless = "0.9"

egui = "0.19"
tap = "1.0"
itertools = "0.10"
rand = "0.8"
strum = "0.24"
strum_macros = "0.24"
arrayvec = "0.7"
vec-drain-where = "1.0"

gridly = "0.9"
gridly_grids = "0.5"

tungstenite = "0.18"
local-ip-address = "0.4.9"
rmp-serde = "1.1"

# bound by bevy
anyhow = "*"
serde = "*"
thiserror = "*"
clap = "4.0.29"
