[package]
name = "quicksweeper"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"

[features]
default = ["bevy/dynamic", "server"]
server = ["local-ip-address", "tokio", "tokio-tungstenite", "futures-util", "unique_id"]

[dependencies]
bevy = { version = "0.9" }
bevy_asset_loader = { version = "0.14", features = ["standard_dynamic_assets", "stageless", "2d"] }
bevy_egui = "0.19"
iyes_loopless = "0.9"

egui = "0.20"
tap = "1.0"
itertools = "0.10"
rand = "0.8"
strum = "0.24"
strum_macros = "0.24"
arrayvec = "0.7"
vec-drain-where = "1.0"
ouroboros = "0.15"

gridly = "0.9"
gridly_grids = "0.5"

tungstenite = "0.18"
local-ip-address = { version = "0.5", optional = true }
rmp-serde = "1.1"
# WASM sockets
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [ "WebSocket", "MessageEvent", "BinaryType", "console" ]}
crossbeam-channel = "0.5"

# bound by bevy
anyhow = "*"
serde = "*"
thiserror = "*"
log = "*"
clap = { version = "4.0.29", features = ["derive"] }
bevy_framepace = "0.11"

# async server packages
tokio = { version = "1.24", features = [ "rt-multi-thread", "net", "sync", "macros" ], optional = true } 
tokio-tungstenite = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }
unique_id = { version = "0.1", optional = true, default-features = false, features = [ "sequence" ]}
once_cell = "1.17.0"
simple_logger = "4.0"
